--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
 # Project Ignores Files
 
 # Maven
-.mvn
+.mvn/
 *.classpath
 *.project
 *.settings
-/bin/*
-/target/*
+bin/
+target/
+log/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+dependency-reduced-pom.xml
 
 #gradle
 .gradle
@@ -14,29 +20,32 @@
 
 # Compiled class file
 *.class
+# Log file
+*.log
+
 
 # Package Files
 *.jar
+*.nar
 *.war
 *.ear
 *.zip
 *.tar.gz
 *.rar
 
-
 # JetBrains IDEs
 .idea/
 *.iml
+*.iws
 
 # Eclipse
 .project
 .classpath
-.settings
+.settings/
 
 # Netbeans
 nbactions*.xml
 nb-configuration*.xml
-
 
 # Folder config file
 Desktop.ini
@@ -50,3 +59,13 @@ $RECYCLE.BIN/
 
 #spring
 .springBeans
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+
+release.properties
+buildNumber.properties
