set ddl-auto to "update" to remove errors when starting the app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:derby:target/dev_db;create=true
 spring.datasource.username=test
 spring.datasource.password=test
 
-#spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
 spring.jpa.database=default
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
