Fix dependency between IT tests

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.stephenc.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0-1</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
