Moved from derby to postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
-spring.datasource.url=jdbc:derby:target/dev_db;create=true
-spring.datasource.username=test
-spring.datasource.password=test
-
-spring.jpa.generate-ddl=true
-spring.jpa.database=default
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/PollApp
+spring.datasource.username=YOUR_DATABASE_USERNAME
+spring.datasource.password=YOUR_DATABASE_PASSWORD
