--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,11 @@ script: mvn clean verify
 jdk:
   - openjdk14
   - oraclejdk14
+
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database PollApp_test;' -U test
+env:
+  global:
+    - PGPORT=5433
