--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,5 @@
-spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
-spring.datasource.url=jdbc:derby:target/dev_test_db;create=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5433/PollApp_Test
 spring.datasource.username=test
-spring.datasource.password=test
-
-spring.jpa.generate-ddl=true
-spring.jpa.database=default
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.datasource.password=
