--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/PollApp
-spring.datasource.username=YOUR_DATABASE_USERNAME
-spring.datasource.password=YOUR_DATABASE_PASSWORD
+spring.datasource.url=jdbc:postgresql://${POLL_APP_DB_HOST}:5432/${POLL_APP_DATABASE}
+spring.datasource.username=${POLL_APP_ROOT_USERNAME}
+spring.datasource.password=${POLL_APP_ROOT_PASSWORD}
