--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-javax.persistence.jdbc.driver=org.apache.derby.jdbc.EmbeddedDriver
-javax.persistence.jdbc.url=jdbc:derby:target/dev_db;create=true
-javax.persistence.jdbc.user=test
-javax.persistence.jdbc.password=test
+POLL_APP_DATABASE=pollapp
+POLL_APP_DB_HOST=localhost
+POLL_APP_ROOT_USERNAME=postgres
+POLL_APP_ROOT_PASSWORD=postgres
