--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
             <artifactId>jjwt-api</artifactId>
             <version>0.11.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
 
         <!-- LOMBOK -->
         <dependency>
