Attempt to fix broken travis - works locally

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=test
 spring.jpa.generate-ddl=true
 spring.jpa.database=default
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 poll.app.jwtExpirationMs=3600000
 poll.app.jwtRrefreshExpirationDateInMs=900000
 poll.app.test.environment=true
