--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://${POLL_APP_DB_HOST}:5432/${POLL_APP_DATABASE}
 spring.datasource.username=${POLL_APP_ROOT_USERNAME}
